fix: 修复Spring Boot 3.x兼容性问题 - javax转jakarta，适配Spring AI 1.0.0-M2 API